[package]
name = "sleepy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.18", features = ["ws"] } 
base64 = "0.21.0"
futures-util = "0.3.31"
image = "0.25.6"
rayon = "1.10.0"
screenshots = "0.5.4"
serde = { version = "1.0", features = ["derive"] } 
tokio = { version = "1.28.0", features = ["full"] }
toml = "0.8.23"
tower-http = { version = "0.4.0", features = ["full"] }
